--- a/springcloud-config/config-repo/cloud-server2-dev.properties
+++ b/springcloud-config/config-repo/cloud-server2-dev.properties
@@ -1,4 +1,4 @@
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:7070/eureka/
+#eureka.client.serviceUrl.defaultZone=http://127.0.0.1:7070/eureka/
 #erver.port= ${PORT:${SERVER_PORT:0}}
 #words=1,2${server.port},3${server.port},4${server.port},5${server.port}
 server.port= 8082
